# personal-goal-loop

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  idea.yml  improvement.yml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  cross-project-atlas.md  improvement-loop.md  local-safety-automation.md  private-vault-operating-guide.md  public-private-boundary.md  publishing.md  release-checklist.md  safe-codex-handoff.md
examples/: denylist.synthetic.json  rules.synthetic.json
scripts/: release-preflight.ps1
src/personal_goal_loop/: __init__.py  cli.py  improvement_loop.py  loop_cli.py  pii_gate.py  workbook_anonymizer.py
template-vault/: Home.md
template-vault/00_Inbox/: Project_Intake.md
template-vault/40_Projects/_template/: PROJECT_CARD.md  PROMOTION_LOG.md  RUN_REVIEW.md
template-vault/50_Codex_Handoff/: CODEX_SAFE_HANDOFF.md  SAFE_SHARE_CHECKLIST.md  SENT_TO_CODEX_LOG.md  TIMECARD_ANONYMIZATION_HANDOFF.md
template-vault/60_Improvements/: CROSS_PROJECT_ATLAS_CARD.md  IMPROVEMENT_PROMOTION_GATE.md  LOCAL_SAFETY_SCAN_CHECKLIST.md
tests/: test_improvement_loop.py  test_workbook_anonymizer.py
tests/fixtures/: expected_synthetic_summary.json  make_synthetic_workbook.py
